--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  
 <head>
-<title>IT Services</title>
+<title>OneNz</title>
 <style>
        h1{text-align: center;}
        ul li a{color: white;}
@@ -22,6 +22,6 @@ KoreChatSDK.chatConfig.botOptions.API_KEY_CONFIG.KEY = '63be2f93562a4d75846638f8
 new KoreChatSDK.chatWindow().show(KoreChatSDK.chatConfig);
 </script>
 <!-- END LivePerson Monitor. -->
-<h1>IT Services</h1>
+<!-- <h1>IT Services</h1> -->
 </body>
 </html>
