--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
 </head>
 <body>
 <!-- BEGIN LivePerson Monitor. -->
-<script src='https://cdn.jsdelivr.net/npm/kore-web-sdk@11.5.1/dist/umd/kore-web-sdk-umd-chat.min.js'></script>
-<script>
-KoreChatSDK.chatConfig.enableThemes = true;
-KoreChatSDK.chatConfig.botOptions.API_KEY_CONFIG.KEY = '63be2f93562a4d75846638f81c2f48ed31902e59de7b421d9c3aa40880c9c9dbstc1';
-new KoreChatSDK.chatWindow().show(KoreChatSDK.chatConfig);
-</script>
+<script src='https://cdn.jsdelivr.net/npm/kore-web-sdk@11.11.1/dist/umd/kore-web-sdk-umd-chat.min.js'></script> <script> KoreChatSDK.chatConfig.botOptions.API_KEY_CONFIG.KEY = '6db0e3920039405d8ce02e613af4934fc6c8f48b951f4da2802fae0e233e380estb2'; new KoreChatSDK.chatWindow().show(KoreChatSDK.chatConfig); </script>
 <!-- END LivePerson Monitor. -->
 <!-- <h1>IT Services</h1> -->
 </body>
